fix swagger user route
