# cmd/api/handler/user_handler.go
@@ -12,14 +12,14 @@ import (
 // Login godoc
 // @Summary      login
 // @Description  login
-// @Tags         auth
+// @Tags         user
 // @Accept       json
 // @Produce      json
 // @Param        username body string true "username"
 // @Param        password body string true "password"
 // @Success      200 {object} auth.LoginResponse
 // @Failure      500 {object} auth.LoginResponse
-// @Router       /auth/login [post]
+// @Router       /user/login [post]
 func Login(c *gin.Context) {
 	var req auth.LoginRequest
 	err := c.ShouldBind(&req)
@@ -36,14 +36,14 @@ func Login(c *gin.Context) {
 // Register godoc
 // @Summary      register
 // @Description  register
-// @Tags         auth
+// @Tags         user
 // @Accept       json
 // @Produce      json
 // @Param        username body string true "username"
 // @Param        password body string true "password"
 // @Success      200 {object} auth.RegisterResponse
 // @Failure      500 {object} auth.RegisterResponse
-// @Router       /auth/register [post]
+// @Router       /user/register [post]
 func Register(c *gin.Context) {
 	var req auth.RegisterRequest
 	err := c.ShouldBind(&req)
@@ -60,14 +60,14 @@ func Register(c *gin.Context) {
 // QueryInfo godoc
 // @Summary      get auth info
 // @Description  get auth info
-// @Tags         auth
+// @Tags         user
 // @Accept       json
 // @Produce      json
 // @Param        user_id body int true "user_id"
 // @Param        token body string true "token"
 // @Success      200 {object} biz.QueryInfoResponse
 // @Failure      500 {object} biz.QueryInfoResponse
-// @Router       /auth [get]
+// @Router       /user [get]
 func QueryInfo(c *gin.Context) {
 	var req biz.QueryInfoRequest
 	err := c.ShouldBind(&req)
